set js code the calculator is completed

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <div class="cal">
-        <input type="text" placeholder="0">
+        <h2>CALCULATOR</h2>
+        <input type="text" placeholder="0" id="inputbox">
         <div>
             <button class="operator">AC</button>
             <button class="operator">DEL</button>
@@ -40,5 +41,6 @@
             <button class="eql">=</button>
         </div>
     </div>
+    <script src="main.js"></script>
 </body>
 </html>
